--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.07.2022 07:40:59</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.07.2022 08:15:33</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,42 @@
 <h5>Středa, 20. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Cizrnová s kari a kokosem</strong>
+<strong>Tomatová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený gordon bleu s vařeným bramborem a tatarkou</strong>
+<strong>Kuřecí stehno na divoko s rýží NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Houbové rizoto se sýrem, okurkou NEBO řepou</strong>
+<strong>Pečený pstruh na másle a šalvěji s dušenou karotkou a pečeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							133,-
+							159,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát se smaženými kuřecími paličkami</strong>
+<strong>Selský salát s pečeným bramborem, uzeným masem a vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							137,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: asijská kuřecí prsa, zapečená treska, brambory, baby mrkev, rýže</strong>
+<strong>Teplý bufet: Mahi mahi s krémovou karotkou a tymiánem, Smetanové brambory, rýže, zelenina, kuřecí špalíčky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: rajčatový s vejcem, šopák, kuskus se zeleninou a ředkvičkami</strong>
+<strong>Saláty: rajčatový, celerovo mrkvový</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
