--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.07.2022 08:47:25</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.07.2022 09:11:23</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Úterý, 26. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Květáková s kuřecím masem</strong>
+<strong>Gulášovka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Svíčková na smetaně s houskovým knedlíkem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							141,-
-						</span>
-</p>
-<p>
-<strong>Těstoviny s tomatovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Smažený květák s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Okouník s petrželkou a hlívou, pečené kuřecí kousky, rýže, baby mrkev, pečené brambory</strong>
+<strong>Vepřová panenka s houbami, pečenou bramborou a petrželkovým dipem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							155,-
+						</span>
+</p>
+<p>
+<strong>Míchaný salát s restovanou slaninkou, čedarem a bagetkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							137,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: Okouník s krémovou cibulkou a olivami, kuřecí nudličky ve sladkokyselé omáčce s chilli, zelenina, rýže, pečené brambory</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: šopský, tlačenkový, zelný s cesnekovým dresinkem</strong>
+<strong>SALÁTY: Šopák, okurkový s chilli dresinkem, tlačenkový</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
@@ -130,7 +137,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s omackou z pecenych paprik, recky bulgurovy salat s cerstvou letni zeleninou, citrony a zelenymi bylinkami {L} 149</li><li>Smazeny filet z cersve tmave tresky s omackou z pecenych paprik, recky bulgurovy salat s cerstvou letni zeleninou, citrony a zelenymi bylinkami {L} 175</li><li>Thajske massaman kari s veprovym masem, pecenou dyni, kokosovym mlekem a arasidy, jasminova ryze 149</li><li>Grilovane kotletky z kraliciho hrbetu se susenymi rajcaty, olivami a bazalkou, pecene brambory, salatek 179</li><li>Indicke zeleninove birjany z basmati ryze, sazene vejce, jogurtovy dip, salatek 149 </li></ol>
+<ol><li>Filet z atlanticke makrely zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 155</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 179</li><li>Grilovany libanonsky kruti kebab, pecene brambory s pecenou zeleninou, jogurtovy dip, salatek 155</li><li>Rostbif z hoveziho orechu s pikantnim avokadovym guacamole, bulgurovy salat se zeleninou a bylinkami, salatek {L} 179</li><li>Pecene papriky a cukety zapecene s bylinkami a goudou, korenena ryze, jogurtovy dip, salatek 155</li></ol>
 </td>
 </tr>
 </table>
