--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.07.2022 08:46:05</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.07.2022 09:12:05</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Středa, 27. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Gulášovka</strong>
+<strong>Polévka se zeleným kari a zeleninou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený květák s vařeným bramborem a tatarkou</strong>
+<strong>Okouník nilský se šťouchaným bramborem s petrželkou a limetkovým dipem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							139,-
+							143,-
 						</span>
 </p>
 <p>
-<strong>Vepřová panenka s houbami, pečenou bramborou a petrželkovým dipem</strong>
+<strong>Špagety s bazalkovým pestem, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							155,-
+							141,-
 						</span>
 </p>
 <p>
@@ -95,7 +95,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová krkovice, cibulové chutney, bramborové pyré s petrželovým pestem <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová krkovice, cibulové chutney, bramborové pyré s petrželovým pestem <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
 <div class="cena">165 Kč</div>
 <div class="clear"></div>
 </li>
@@ -134,7 +134,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlanticke makrely zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 155</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 179</li><li>Grilovany libanonsky kruti kebab, pecene brambory s pecenou zeleninou, jogurtovy dip, salatek 155</li><li>Rostbif z hoveziho orechu s pikantnim avokadovym guacamole, bulgurovy salat se zeleninou a bylinkami, salatek {L} 179</li><li>Pecene papriky a cukety zapecene s bylinkami a goudou, korenena ryze, jogurtovy dip 155</li></ol>
+<ol><li>Peceny atlanticky hejk s holandskou omackou s celozrnnou horcici, stouchane brambory s creme fraiche, salatek z cervene repy 155</li><li>Peceny filet z cerstveho norskeho lososa s holandskou omackou s celozrnnou horcici, stouchane brambory s creme fraiche, salatek z cervene repy 179</li><li>Thajske hovezi nudlicky s pecenymi palivymi paprikami, zelenymi bylinkami a arasidy, jasminova ryze, salatek 155</li><li>Pomalu dusena veprova licka ve sladke omacce se zazvorem a  korenim peti vuni, psenicne nudle s opekanym zelim, salatek 175</li><li> Indicke kvetakove kari se zazvorem, rajcaty, beluga cockou a jogurtem, jasminova ryze 155</li></ol>
 </td>
 </tr>
 </table>
