--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.08.2022 08:45:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.08.2022 09:12:24</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Úterý, 02. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kmínová s vejcem</strong>
+<strong>Krémová česnečka s kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Maďarský Vepřový guláš s houskovým knedlíkem NEBO těstovinou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							143,-
-						</span>
-</p>
-<p>
-<strong>Špagety bolognesse s parmazánem</strong>
+<strong>Anglická Krůtí játra s pečeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							141,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Smetanově brambory, kuřecí prsa s rajčatovým pestem, Tilapie s paprikou a tymiánem, brokolice, rýže</strong>
+<strong>Srbské vepřové rizoto se sýrem a okurkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							139,-
+						</span>
+</p>
+<p>
+<strong>Caesar salát s kuřecím masem a krutony</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							143,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: Tilapie se slaninou a rajcaty, Vepřový plátek s houbami a šalvěji, batáty pečené, rýže, brokolice</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: rajčatový s vejcem a cibulkou, míchaná zelenina, těstovinový s kuřecím masem a pestem ze sušených rajčat</strong>
+<strong>SALÁTY: těstovinový s kuřecím masem a pestem ze sušených rajčat, čočkový s kari</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -140,7 +147,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s pecenymi rajcaty a petrzelkovym pestem, pikantní indicky dal ze zluteho hrachu se zeleninou, salatek 155</li><li>Peceny filet z cerstveho morskeho vlka s pecenymi rajcaty a petrzelkovym pestem, pikantní indicky dal ze zluteho hrachu se zeleninou, salatek 179</li><li>Pad kra pao – thajske restovane veprove se zelenymi fazolkami, bazalkou, sazenym vejcem a chilli, jasminova ryze, salatek 155</li><li>Hovezi licka na Merlotu a korenove zelenine, pecene brambory, salatek 169</li><li>Ratatouille z letni pecene zeleniny, rajcaty a bazalkou s opekanym uzenym tofu, pecene brambory 155</li></ol>
+<ol><li>Peceny filet z trebonskeho kapra {prorezavany – bez kosti} s kaparovym maslem, stouchane brambory se zelenou cibulkou, salatek z cervene repy 155</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, stouchane brambory se zelenou cibulkou, salatek z cervene repy 179</li><li>Lasagne s hovezim a veprovym masem, rajcaty, cuketami a bazalkou zapecene ve smetanove omacce, salatek 155</li><li>Grilovane medailonky z krutich prsou s merunkovym catny s kardamomem, pecene brambory, salatek 179</li><li>Burrito s pikantnim chilli z maslovych fazoli s palivymi slovenskymi paprikami, okurkove tzatziki, korenena ryze, salatek {L} 155 </li></ol>
 </td>
 </tr>
 </table>
